# FRAMEVIEW

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md  build.bat
app/: main.cpp
backend/d3d11/: d3d11_context.cpp  d3d11_context.h  d3d11_draw_manager.cpp  d3d11_draw_manager.h  d3d11_renderer.cpp  d3d11_renderer.h  d3d11_resource_manager.cpp  d3d11_resource_manager.h  d3d11_texture.cpp  d3d11_texture.h
core/: buffer.cpp  buffer.h  context.h  draw_buffer.cpp  draw_buffer.h  draw_manager.h  draw_types.h  draw_util.h  renderer.h  resource_manager.h  types.h
math/: angle.h  color_rgba.h  constants.h  matrix4x4f.h  vec2f.h  vec3f.h  vec4f.h
resources/: font.cpp  font.h  shader.cpp  shader.h  texture.h
resources/shaders/include/: blur.hlsli  scissor_blur.hlsli  types.hlsli
resources/shaders/pixel/: blur_x.hlsl  blur_y.hlsl  color_only.hlsl  fallback.hlsl  generic.hlsl  key.hlsl  scissor.hlsl  scissor_blur_x.hlsl  scissor_blur_y.hlsl  scissor_key.hlsl
resources/shaders/vertex/: fallback.hlsl  generic.hlsl
tests/: test_error.cpp  test_logger.cpp  test_placeholder.cpp
utils/: error.cpp  error.h  logger.cpp  logger.h  platform.h
